--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
+    "recharts": "^2.8.0",
     "sort-by": "^0.0.2",
-    "sweetalert2": "^11.7.28"
+    "sweetalert2": "^11.6.13"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
